# NVIDIA-Optical-Character-Detection-and-Recognition-Solution

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG  CMakeLists.txt  LICENSE  Makefile  README.md
c++_samples/: CMakeLists.txt  README.md  base_sample.hpp  crop_based_inference.cpp  crop_based_inference_vit.cpp  sample_inference.cpp  simple_inference.cpp  simple_inference_ClipOCR.cpp  simple_inference_nvCLIP4STR.cpp  simple_inference_vit.cpp
c++_samples/paper_img/results/: Snipaste_2024-10-18_18-00-28.png_sentence.txt
deepstream/: Dockerfile  Dockerfile.vit  Makefile  build_docker.sh  build_docker_vit.sh  nvocdrlib_impl.cpp
doc/: nvOCDR.md
include/: nvocdr.h
legacy/: README.md  npp.h
py_bind/: main.cpp
pybind/: CMakeLists.txt  main.cpp  py_nvocdr.hpp
samples/c++/: CMakeLists.txt  README.md  base_sample.hpp  sample_inference.cpp
samples/python/: sample_inference.py
samples/test_img/: scene_text.txt
scripts/: setup_build_env.sh
src/: CMakeLists.txt  MemManager.cpp  MemManager.h  OCDNetEngine.cpp  OCDNetEngine.h  OCRNetBaseEngineVirtual.h  OCRNetEngine.cpp  OCRNetEngine.h  OCRNetNvCLIP4STREngine.cpp  OCRNetNvCLIP4STREngine.h  RectEngine.cpp  RectEngine.h  SimpleTokenizer.cpp  SimpleTokenizer.h  TRTEngine.cpp  TRTEngine.h  kernel.cu  kernel.h  nvOCDR.cpp  nvOCDR.h  nvOCDR.hpp  nvocdr.cpp  nvocdr.h  postprocess.cpp  postprocess.h  utils.h
src/impl/: MemManager.cpp  MemManager.h  OCDNetEngine.cpp  OCDNetEngine.h  OCDProcessor.cpp  OCDProcessor.h  OCRNetEngine.cpp  OCRNetEngine.h  OCRProcessor.cpp  OCRProcessor.h  RectEngine.cpp  TRTEngine.cpp  TRTEngine.h  base.cpp  base.h  kernel.cu  kernel.h  macro.h  nvOCDR.cpp  nvOCDR.h  nvOCDR_impl.cpp  nvOCDR_impl.h  timer.hpp  tokenizer.cpp  tokenizer.h
test/: CMakeLists.txt  main.cpp  nvocdr_basic_test.cpp  test_ocddcn_ocrres50.cpp  test_tokenizer_bpe.cpp  test_utils.hpp
tools/: compile_trt_oss_jetson.sh  download_models.sh  get_archs.py  setup_build_env.sh  setup_dev_env.sh  setup_env.sh
triton/: Makefile  README.md  README_Word2Sentence.md  Triton_Client.Dockerfile  Triton_Server.Dockerfile  build_engine.sh  client.py  nvocdr_infer_sample.py  nvocdr_paper_client.py  nvocdr_pybind_test.py  pybind.cpp  pybind.h  requirements-pip.txt  sample_word2sentence.py  setup.py  setup_triton_client.sh  setup_triton_server.sh  start_server.sh
triton/backend/: CMakeLists.txt  config.pbtxt  libtriton_nvocdr.ldscript  triton_nvocdr_backend.cpp
triton/client/: sample_triton_client.py
triton/models/nvOCDR/: config.pbtxt  spec.json
triton/models/nvOCDR/1/: model.py
triton/models/nvOCDR_paper/: config.pbtxt
triton/models/word2sentence/: config.pbtxt  spec.json
triton/models/word2sentence/1/: model.py
triton/utils/: cuda_resize_keep_AR.py  process.py
